# aifo-coder-rs

./: #ISSUES#  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .npmrc  AGENT.md  AGENTS.md  ARCHITECTURE.md  CHANGES.md  CONTRIBUTING.md  CONVENTIONS.md  COVERAGE.md  Cargo.toml  Cross.toml  Dockerfile  INSTALL.md  LICENSE  LICENSE-APACHE  Makefile  NOTICE  README.md  SCORE-before.md  SCORE.md  TOOLCHAINS.md  aifo-coder  aifo-coder-toolchain-rust-v2.spec  aifo-coder-toolchain-rust-v4.spec  aifo-coder-toolchain-rust-v5.spec  aifo-coder-toolchain-shim-implementation-v1.spec  aifo-coder.ps1  build.all  build.rs  env.sample  renovate.json
.cargo/: config.toml
.config/: nextest.toml
apparmor/: aifo-coder.apparmor.tpl
ci/: git-nosign.conf  otel-golden-stdout.sh  telemetry-smoke.sh
context7/: opentelemetry-rust.md
docs/: BUILDKIT.md  CONTRIBUTING.md  INSTALL.md  PHASE0-INVENTORY.md  README-coding-agent-security-anaysis.md  README-contributing.md  README-macos-cross-prereqs.md  README-macos-cross-validation.md  README-opentelemetry.md  README-security-architecture.md  README-support.md  README-testing.md  README-toolchains.md  README-toolexec.md  RELEASE_NOTES_v5.md  TESTING.md  TOOLCHAINS.md  TOOLEEXEC_PROTOCOL.md  TOOLEXEC.md  VERIFY_v5.md  ci-caching-and-sccache.md  otel.md  phase0-string-inventory-main.md  phase0-updates.md  support-matrix.md
man/: aifo-coder.1
prompts/: TESTS.md
scripts/: aifo-entrypoint.sh  aifo-gpg-wrapper.sh  build-images.sh  cov2ai.py  dev.sh  fix-dedup-ignore.sh  fix-test-names.sh  git-pre-push  lint-test-naming.sh  phase2-rename-e2e.sh  phase2-rename-int.sh  phase2-rename-unit.sh  phase3-rename-functions.sh  tidy_no_multiline_strings.rs
spec/: aifo-coder-basic-features.spec  aifo-coder-cleanup-codebase-interation-1-v1.spec  aifo-coder-consolidate_cargo_nextest_calls_in_makefile_use_identical_args-v1.spec  aifo-coder-consolidate_cargo_nextest_calls_in_makefile_use_identical_args-v2.spec  aifo-coder-drop-ci-caching-of-rust-target-add-sscache-v1.spec  aifo-coder-eliminate-multiline-continuation-strings-v1.spec  aifo-coder-eliminate-multiline-continuation-strings-v2.spec  aifo-coder-eliminate_more_docker_layer_bloat-v1.spec  aifo-coder-eliminate_more_docker_layer_bloat-v2.spec  aifo-coder-eliminate_more_docker_layer_bloat-v3.spec  aifo-coder-eliminate_more_docker_layer_bloat-v4.spec  aifo-coder-fork-attach-feature-v1.spec  aifo-coder-fork-attach-feature-v2.spec  aifo-coder-fork-attach-feature-v3.1.spec  aifo-coder-fork-attach-feature-v3.spec  aifo-coder-implement-dmg-notarization-v1.spec  aifo-coder-implement-dmg-notarization-v2.spec  aifo-coder-implement-generic-notification-commands-and-say-v1.spec  aifo-coder-implement-macos-cross-builder-image-v1.spec  aifo-coder-implement-macos-cross-builder-image-v2.spec  aifo-coder-implement-macos-cross-builder-image-v3.spec  aifo-coder-implement-macos-cross-builder-image-v4.spec  aifo-coder-implement-openhands-opencode-plandex-v2.spec  aifo-coder-implement-openhands-opencode-plandex-v3.spec  aifo-coder-implement-openhands-opencode-plandex-v4.spec  aifo-coder-implement-openhands-opencode-plandex.spec  aifo-coder-implement-otel-traces-to-logs-bridge-v1.spec  aifo-coder-implement-otel-traces-to-logs-bridge-v3.spec  aifo-coder-implement-smart-shims-v1.spec  aifo-coder-implement-smart-shims-v2.spec  aifo-coder-implement-smart-shims-v3.spec.md  aifo-coder-implement-test-matrix-coder-toolchains-v1.spec  aifo-coder-implement-test-matrix-coder-toolchains-v2.spec  aifo-coder-implement-test-matrix-coder-toolchains-v3.spec  aifo-coder-lib-rs-refactoring-and-cleanup-v1.spec  aifo-coder-lib-rs-refactoring-and-cleanup-v2.spec  aifo-coder-mach-o-binary-signing-using-apple-dev-id-app-v1.spec  aifo-coder-mach-o-binary-signing-using-apple-dev-id-app-v2.spec  aifo-coder-mach-o-binary-signing-using-apple-dev-id-app-v3.spec  aifo-coder-mach-o-binary-signing-using-apple-dev-id-app-v4.spec  (+70 more)
src/: CHANGES.md  SCORE.md  agent_images.rs  apparmor.rs  banner.rs  cli.rs  color.rs  docker.rs  docker_impl.rs  docker_mod.rs  doctor.rs  errors.rs  fork.rs  fork_args.rs  guidance.rs  lib.rs  (+12 more)
(+598 files in other folders)
