[package]
name = "aifo-coder"
version = "0.6.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Host-side launcher for containerized coding agents (Codex, Crush, Aider, OpenHands, OpenCode, Plandex) using Docker; includes Fork mode with tmux/Windows Terminal orchestration, per-pane state mounts, and repo-scoped locking"
repository = "https://git.intern.migros.net/ai-foundation/prototypes/aifo-coder-rs"
keywords = ["docker", "cli", "rust", "toolchain", "coding"]
categories = ["command-line-utilities", "development-tools"]
default-run = "aifo-coder"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
which = "6"
atty = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "process", "user", "signal"] }
home = "0.5"
serde_json = "1"
once_cell = "1"
libc = "0.2"
dotenvy = "0.15"
fs2 = "0.4"
getrandom = "0.2"
serde_yaml = "0.9"
tracing = { version = "0.1", features = ["std"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.25", optional = true }
opentelemetry-stdout = { version = "0.5", optional = true }
opentelemetry-otlp = { version = "0.22", features = ["grpc-tonic", "http-proto"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
hostname = { version = "0.3", optional = true }
humantime = { version = "2.1", optional = true }
urlencoding = "2"
tempfile = "3"

[features]
otel = [
    "tracing",
    "tracing-subscriber",
    "opentelemetry",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
    "opentelemetry-stdout",
    "hostname",
    "humantime",
]
otel-otlp = [
    "otel",
    "opentelemetry-otlp",
    "tokio",
]

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
split-debuginfo = "unpacked"

[profile.test]
split-debuginfo = "unpacked"
opt-level = 1
codegen-units = 32
debug = 0
