[package]
name = "aifo-coder"
version = "0.6.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Host-side launcher for containerized coding agents (Codex, Crush, Aider, OpenHands, OpenCode, Plandex) using Docker; includes Fork mode with tmux/Windows Terminal orchestration, per-pane state mounts, and repo-scoped locking"
repository = "https://git.intern.migros.net/ai-foundation/prototypes/aifo-coder-rs"
keywords = ["docker", "cli", "rust", "toolchain", "coding"]
categories = ["command-line-utilities", "development-tools"]
default-run = "aifo-coder"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
which = "6"
atty = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "process", "user", "signal"] }
home = "0.5"
serde_json = "1"
once_cell = "1"
libc = "0.2"
dotenvy = "0.15"
fs2 = "0.4"
getrandom = "0.2"
serde_yaml = "0.9"

[dev-dependencies]
urlencoding = "2"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
split-debuginfo = "unpacked"

[profile.test]
split-debuginfo = "unpacked"
opt-level = 1
codegen-units = 32
debug = 0
